--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "csurf": "^1.11.0",
     "dotenv": "^9.0.1",
     "esm": "^3.2.25",
     "express": "^4.17.1",
